<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Submission Movie Catalogue</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="menu_movie">Movie</string>
    <string name="_menu_tv_show">Tv Show</string>
    <string name="change_language">Change Language</string>
    <string name="gagal_menampilkan_data">Failed for showing data</string>
    <string name="title_tab_movie" translatable="false">Movie</string>
    <string name="title_tab_tv" translatable="false">Tv Show</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="added_to_favorite">Added to favorite Movie</string>
    <string name="deleted_from_favorite">Deleted from Movie favorites</string>
    <string name="added_to_favorite_tv">Added to favorite Tv Show</string>
    <string name="deleted_from_favorite_tv">Deleted from favorite Tv Show</string>
    <string name="detail_image_poster" translatable="false">Detail image poster</string>
    <string name="row_image_poster" translatable="false">row image poster</string>
    <string name="empty_image" translatable="false">empty_image</string>
    <string-array name="data_movie_rating">
        <item>6.8</item>
        <item>7.1</item>
        <item>8.8</item>
        <item>6.9</item>
        <item>7.8</item>
        <item>8.0</item>
        <item>6.2</item>
        <item>7.9</item>
        <item>8.5</item>
        <item>8.6</item>
        <item>8.3</item>
        <item>7.2</item>
        <item>7.1</item>
        <item>7.6</item>
        <item>6.1</item>
        <item>8.8</item>
        <item>8.4</item>
        <item>6.4</item>
        <item>6.3</item>
        <item>8.0</item>
    </string-array>
    <string-array name="data_tv_rating">
        <item>7.9</item>
        <item>8.5</item>
        <item>8.6</item>
        <item>8.3</item>
        <item>7.2</item>
        <item>7.1</item>
        <item>7.6</item>
        <item>6.1</item>
        <item>6.8</item>
        <item>7.1</item>
        <item>8.8</item>
        <item>6.9</item>
        <item>7.8</item>
        <item>8.0</item>
        <item>6.2</item>
        <item>8.8</item>
        <item>8.4</item>
        <item>6.4</item>
        <item>6.3</item>
        <item>8.0</item>
    </string-array>
    <string-array name="data_movie_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers : Infinity War</item>
        <item>Birdbox</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumble Bee</item>
        <item>Creed II</item>
        <item>Deadpool</item>
        <item>How to Train Your Dragon</item>
        <item>Dragonball</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Marry Popins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robinhood</item>
        <item>Spiderman</item>
        <item>The Girl in The Spiders Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_tv_title">
        <item>Altered Carbon</item>
        <item>Black Lightning</item>
        <item>Final Space</item>
        <item>Killing Eve</item>
        <item>Legacies</item>
        <item>Lost In Space 2</item>
        <item>Manifest</item>
        <item>The Resident</item>
        <item>Titans</item>
        <item>You</item>
    </string-array>
    <string-array name="data_tv_description">
        <item>After 250 years on ice, a prisoner returns to life in a new body with one chance to win his freedom by solving a mind-bending murder.</item>
        <item>Jefferson Pierce is a man wrestling with a secret. As the father of two daughters and principal of a charter high school that also serves as a safe haven for young people in a New Orleans neighborhood overrun by gang violence, he is a hero to his community.</item>
        <item>An astronaut named Gary and his planet-destroying sidekick Mooncake embark on serialized journeys through space in order to unlock the mystery of “Final Space,” the last point in the universe, if it actually does exist.</item>
        <item>A security consultant hunts for a ruthless assassin. Equally obsessed with each other, they go head to head in an epic game of cat-and-mouse.</item>
        <item>In a place where young witches, vampires, and werewolves are nurtured to be their best selves in spite of their worst impulses, Klaus Mikaelson’s daughter, 17-year-old Hope Mikaelson, Alaric Saltzman’s twins, Lizzie and Josie Saltzman, among others, come of age into heroes and villains at The Salvatore School for the Young and Gifted.</item>
        <item>After crash-landing on an alien planet, the Robinson family fights against all odds to survive and escape. But theyre surrounded by hidden dangers.</item>
        <item>After landing from a turbulent but routine flight, the crew and passengers of Montego Air Flight 828 discover five years have passed in what seemed like a few hours. As their new realities become clear, a deeper mystery unfolds and some of the returned passengers soon realize they may be meant for something greater than they ever thought possible.</item>
        <item>A tough, brilliant senior resident guides an idealistic young doctor through his first day, pulling back the curtain on what really happens, both good and bad, in modern-day medicine.</item>
        <item>A team of young superheroes led by Nightwing (formerly Batmans first Robin) form to combat evil and other perils.</item>
        <item>When a brilliant bookstore manager crosses paths with an aspiring writer, he uses the internet and social media to gather the most intimate of details and get close to her. A charming and awkward crush quickly becomes</item>
    </string-array>
</resources>